clarify yt shorts and tiktok have same threshold

--- a/app/info/go-viral/page.mdx
+++ b/app/info/go-viral/page.mdx
@@ -8,7 +8,7 @@ _(you can make multiple posts on the same platform & add up the interactions as 
 * Github - 150 stars   
 * Hacker News - First page of Hacker News at any given time   
 * Youtube - 15K views OR 1k likes  
-* YouTube Shorts - 50,000 views OR 2,500 likes
+* YouTube Shorts / TikTok - 50,000 views OR 2,500 likes
 * Instagram - 20K views OR 3K likes   
 * Reddit - 2.5k upvotes OR 200 comments
 * Google Play Store - 1,000 downloads OR Top 100 in category
