Add Threads (by Meta) to Go Viral  list

--- a/app/info/go-viral/page.mdx
+++ b/app/info/go-viral/page.mdx
@@ -3,7 +3,7 @@
 ### Going viral means meeting **one** of the thresholds below cumulatively on your posts about your project:
 _(you can make multiple posts on the same platform & add up the interactions as long as it's in a good faith)_
 
-* Twitter (aka X) - 1.5K likes OR 200 retweets
+* Twitter (aka X) / Threads - 1.5K likes OR 200 retweets
 * Bluesky - 1.5K likes OR 200 reposts
 * Github - 150 stars   
 * Hacker News - First page of Hacker News at any given time   
