Add dependents to viral req

--- a/app/info/go-viral/page.mdx
+++ b/app/info/go-viral/page.mdx
@@ -5,7 +5,7 @@ _(you can make multiple posts on the same platform & add up the interactions as 
 
 * Twitter (aka X) / Threads - 1.5K likes OR 200 retweets
 * Bluesky - 1.5K likes OR 200 reposts
-* Github - 150 stars   
+* Github - 150 stars OR 150 dependents
 * Hacker News - First page of Hacker News at any given time   
 * Youtube - 15K views OR 1k likes  
 * YouTube Shorts / TikTok - 50,000 views OR 2,500 likes
